# light-map-navigation

./: README.md  connect_camera.sh
.devcontainer/: devcontainer.json
src/classic_nav_bringup/urdf/: sentry_robot_sim.xacro
src/classic_navigation/classic_navigation/rviz/: nav2.rviz
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: ImageSegmentation.action
src/custom_interfaces/srv/: GetConcaveHull.srv  GetIPMContourPoints.srv  WpCalcu.srv
src/grounded_sam/: action_counter.py  grounded_sam_func_contour.py
src/ipm_package/: mask.json
src/ipm_package/concave_full/: CMakeLists.txt  package.xml
src/ipm_package/concave_full/src/: concave_hull_node.cpp  concave_server.cpp
src/ipm_package/ipm_image_node/: setup.py
src/ipm_package/ipm_image_node/ipm_image_node/: ipm_json.py  ipm_json2.py  ipm_obs_use.py  ipm_obstacle.py  ipm_obstacle_client.py  ipm_obstacle_server.py  ipm_obstacle_server_backup.py  ipm_server_backup.py  ipm_test_numpoints.py  ipm_test_onepoint.py
src/ipm_package/ipm_image_node/launch/: start_ipm.launch.py
src/llm_delivery/: setup.py
src/llm_delivery/llm_delivery/: llm_agent.py  llm_delivery_node.py  llm_delivery_node_sem.py  osm_planner_node.py  osm_route.py  wp_generation_service.py
src/llm_exploration_py/llm_exploration_py/: llm_exploration_server.py
src/llm_obj_nav/: README.md  Recordme.md  package.xml  setup.cfg  setup.py
src/llm_obj_nav/llm_obj_nav/: GLEE_test_node.py  gazebo_simulator_node.py  llm_obj_nav_node.py  multicamera_test_node.py
src/llm_obj_nav/llm_obj_nav/instructnav_use/: config_utils.py  constants.py  mapper.py  objnav_agent.py  objnav_agent_backup.py  (+3 more)
src/osm_planner/: README.md  package.xml  setup.cfg  setup.py
src/osm_planner/launch/: osm_planner.launch.py
src/osm_planner/osm_planner/: osm_planner_opti_backup.py  osm_planner_opti_node.py
src/rm_nav_bringup/: CMakeLists.txt  package.xml
src/rm_nav_bringup/PCD/: C505.pcd  kjds_1.pcd  kjds_2.pcd  lab417.pcd
src/rm_nav_bringup/config/reality/: fastlio_mid360_real.yaml  measurement_params_real.yaml  nav2_params_real.yaml  nav2_params_real_dwb.yaml  nav2_params_real_mppi.yaml  segmentation_real.yaml
src/rm_nav_bringup/config/simulation/: nav2_params_sim.yaml  nav2_params_sim_backup.yaml  nav2_params_sim_mppi.yaml
src/rm_nav_bringup/launch/: bringup_real.launch.py  bringup_sim.launch.py
src/rm_nav_bringup/map/: C505.pgm  C505.yaml  TOSM.pgm  TOSM.yaml  kjds_1.pgm  kjds_1.yaml  kjds_2.pgm  kjds_2.yaml  lab417.pgm  lab417.yaml  outdoor1.yaml  real1_shifted.yaml
src/rm_nav_bringup/src/: envpcd_pub_node.cpp
src/rm_nav_bringup/urdf/: scoutv2.xacro  sentry_robot_real.xacro  sentry_robot_sim.xacro
src/scout_interfaces/: CMakeLists.txt  package.xml
src/scout_test/: package.xml  setup.cfg  setup.py
src/scout_test/scout_test/: depth_generate_node.py  param_test_node.py  pub_mapodom_node.py  simple_nav_node.py  test_gazebo_node.py
(+16 files in other folders)
